--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-filter==24.2
 django-js-asset==2.2.0
 django-nested-inline==0.4.6
 djangorestframework==3.15.2
+drf-nested-routers==0.94.1
 drf-spectacular==0.27.2
 gunicorn==22.0.0
 idna==3.7
