--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 Django==4.2.13
 django-ckeditor==6.7.1
 django-cors-headers==4.4.0
+django-dump-load-utf8==0.0.4
 django-filter==24.2
 django-js-asset==2.2.0
 django-nested-inline==0.4.6
