--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ django-ckeditor==6.7.1
 django-cors-headers==4.4.0
 django-dump-load-utf8==0.0.4
 django-filter==24.2
+django-jazzmin==3.0.0
 django-js-asset==2.2.0
+django-modeltranslation==0.19.9
 django-nested-inline==0.4.6
 djangorestframework==3.15.2
 drf-nested-routers==0.94.1
