--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-jazzmin==3.0.0
 django-js-asset==2.2.0
 django-modeltranslation==0.19.9
 django-nested-inline==0.4.6
+django-unfold==0.39.0
 djangorestframework==3.15.2
 drf-nested-routers==0.94.1
 drf-spectacular==0.27.2
